@@ -1,3 +1,11 @@
+2000-02-25  Dominik Vogt  <a@b>
+
+	* configure.in: changed version to 2.3.24
+
+2000-02-25  x  <y>
+
+	* configure.in: changed version to 2.3.23
+
 2000-02-25  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* configure.in: changed version to 2.3.16
